data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1890.wast
;; 1. **Type Mismatch in Loop Target Operand**:    - **Description**: Test a `br_if` instruction that targets a loop expecting an `i64` type operand, but provide an `i32` type instead. This should fail due to type mismatch.    - **Constraint**: Ensures that the `br_if` correctly validates operand types against the input types of the targeted loop.    - **Differential Behavior**: WASM should catch the type error immediately, whereas wizard_engine might mishandle the stack reference entries.

(assert_invalid
  (module (func $type-mismatch-loop-target-operand
    (loop (result i64) (br_if 0 (i32.const 0)) (i64.const 1))
  ))
  "type mismatch"
)